--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ install:
   - choco install -r -y make
   - choco install strawberryperl
   - "SET PATH=C:\\strawberry\\perl\\bin;C:\\strawberry\\perl\\site\\bin;C:\\strawberry\\c\\bin;%PATH%"
-  - "SET PATH=%PATH%;C:\MinGW\msys\1.0\bin;C:\MinGW\bin"
+  - "SET PATH=%PATH%;C:\\MinGW\\msys\\1.0\\bin;C:\\MinGW\\bin"
 
 branches:
   # whitelist
