adding mingw explicit install

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,7 @@ environment:
 
 install:
   - choco install -r -y make
+  - choco install -r -y mingw
   - choco install strawberryperl
   - "SET PATH=C:\\strawberry\\perl\\bin;C:\\strawberry\\perl\\site\\bin;C:\\strawberry\\c\\bin;%PATH%"
   - "SET PATH=%PATH%;C:\\MinGW\\msys\\1.0\\bin;C:\\MinGW\\bin"
