--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,9 +10,12 @@ environment:
 install:
   - choco install -r -y make
   - choco install -y strawberryperl
-  -  C:\msys64\usr\bin\bash -lc -c "pacman --noconfirm -S autoconf automake libtool"
+  - C:\msys64\usr\bin\bash -lc "pacman --needed --noconfirm -Sy pacman-mirrors"
+  - C:\msys64\usr\bin\bash -lc "pacman --noconfirm -Sy"		
+  - C:\msys64\usr\bin\bash -lc "pacman --noconfirm -S autoconf automake "		
+  - C:\msys64\usr\bin\bash -lc "pacman --noconfirm -S mingw-w64-i686-oniguruma mingw-w64-x86_64-oniguruma"
   - "SET PATH=C:\\strawberry\\perl\\bin;C:\\strawberry\\perl\\site\\bin;C:\\strawberry\\c\\bin;%PATH%"
-  - "SET PATH=%PATH%;C:\\MinGW\\msys\\1.0\\bin;C:\\MinGW\\bin;C:\\MinGW64\\bin"
+  - set PATH=C:\msys64\usr\bin;%PATH%
 
 branches:
   # whitelist
