--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,9 +12,9 @@ install:
   - choco install -y strawberryperl
   - C:\msys64\usr\bin\bash -lc "pacman --needed --noconfirm -Sy pacman-mirrors"
   - C:\msys64\usr\bin\bash -lc "pacman --noconfirm -Sy"		
-  - C:\msys64\usr\bin\bash -lc "pacman --noconfirm -S autotools autoconf automake "		
+  - C:\msys64\usr\bin\bash -lc "pacman --noconfirm -S autoconf automake "		
   - C:\msys64\usr\bin\bash -lc "pacman --noconfirm -S mingw-w64-i686-oniguruma mingw-w64-x86_64-oniguruma"
-  - "SET PATH=C:\\strawberry\\perl\\bin;C:\\strawberry\\perl\\site\\bin;C:\\strawberry\\c\\bin;%PATH%"
+  - "SET PATH=C:\\strawberry\\perl\\bin;C:\\strawberry\\perl\\site\\bin;%PATH%"
   - set PATH=C:\msys64\usr\bin;%PATH%
 
 branches:
