--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,7 +23,7 @@ build_script:
   - cd ./bng2/Network3 
   - mkdir -p m4 
   - cd .. 
-  - perl make_dist.pl --build --validate
+  - C:\msys64\usr\bin\bash -lc "perl make_dist.pl --build --validate"
 
 # artifacts:
 #  - path: build\NFsim.exe
